[gd_scene load_steps=4 format=3 uid="uid://c18e0upa0wks"]

[ext_resource type="Script" uid="uid://b10jc61y81jmy" path="res://scripts/audio_bar.gd" id="1_nu0nq"]
[ext_resource type="Script" uid="uid://vktnnrq1qmwl" path="res://scripts/waveformButton.gd" id="2_nu0nq"]
[ext_resource type="Texture2D" uid="uid://diikdhsnib86m" path="res://assets/other/play_button.png" id="3_kixu7"]

[node name="AudioBar" type="Node2D"]
script = ExtResource("1_nu0nq")

[node name="WaveformButton" type="TextureButton" parent="."]
unique_name_in_owner = true
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_nu0nq")

[node name="PlayButton" type="TextureButton" parent="."]
unique_name_in_owner = true
texture_normal = ExtResource("3_kixu7")
ignore_texture_size = true
stretch_mode = 0

[node name="SeekLine" type="Line2D" parent="."]
unique_name_in_owner = true
width = 4.0
default_color = Color(0.236633, 0.481223, 0.240062, 1)

[node name="Timecode" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
